<resources>
    <string name="app_name">Blog App</string>
    <string name="reg_name">Name</string>
    <string name="reg_mail">Mail</string>
    <string name="reg_password">Password</string>
    <string name="reg_password_repeat">Repeat Password</string>
    <string name="reg_button">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="drawerOptionHome">Home</string>
    <string name="drawerOptionProfile">Profile</string>
    <string name="drawerOptionSettings">Settings</string>
    <string name="drawerOptionSignOut">Sign Out</string>
    <string name="popUpTitle">Title</string>
    <string name="popUpDescription">Description</string>
    <string name="popUpImgContentDescription">Image</string>
</resources>
