<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_home">
    <group android:checkableBehavior="single">
        <item android:id="@+id/navItemHome"
            android:title="@string/drawerOptionHome"
            android:icon="@drawable/ic_home_item"/>
        <item android:id="@+id/navItemProfile"
            android:title="@string/drawerOptionProfile"
            android:icon="@drawable/ic_profile_item" />
        <item android:id="@+id/navItemSettings"
            android:title="@string/drawerOptionSettings"
            android:icon="@drawable/ic_settings_item" />
        <item android:id="@+id/navItemSignOut"
            android:title="@string/drawerOptionSignOut"
            android:icon="@drawable/ic_signout_item" />
    </group>
</menu>